feat(obligation_import): Add functionality to import obligations via json file
