# cmd/laas/docs/swagger.yaml
@@ -62,6 +62,16 @@ definitions:
         example: 200
         type: integer
     type: object
+  models.ImportObligationsResponse:
+    properties:
+      data:
+        description: can be of type models.LicenseError or models.ObligationImportStatus
+        items: {}
+        type: array
+      status:
+        example: 207
+        type: integer
+    type: object
   models.LicenseDB:
     properties:
       external_ref:
@@ -1230,6 +1240,38 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Fetches audits corresponding to an obligation
+      tags:
+      - Obligations
+  /obligations/import:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Import obligations by uploading a json file
+      operationId: ImportObligations
+      parameters:
+      - description: obligations json file list
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "207":
+          description: Multi-Status
+          schema:
+            $ref: '#/definitions/models.ImportObligationsResponse'
+        "400":
+          description: input file must be present
+          schema:
+            $ref: '#/definitions/models.LicenseError'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/models.LicenseError'
+      security:
+      - ApiKeyAuth: []
+      summary: Import obligations by uploading a json file
       tags:
       - Obligations
   /search:
