# pkg/models/types.go
@@ -328,3 +328,38 @@ type ObligationMapResponse struct {
 	Data   []ObligationMapUser `json:"data"`
 	Meta   PaginationMeta      `json:"paginationmeta"`
 }
+
+type ObligationImportRequest struct {
+	ObligationFile string `form:"file"`
+}
+
+// Obligation represents an obligation record in the import json file.
+type ObligationImport struct {
+	Topic          string   `json:"topic" example:"copyleft" validate:"required"`
+	Type           string   `json:"type" enums:"obligation,restriction,risk,right" validate:"required"`
+	Text           string   `json:"text" example:"Source code be made available when distributing the software." validate:"required"`
+	Classification string   `json:"classification" enums:"green,white,yellow,red" validate:"required"`
+	Modifications  bool     `json:"modifications" validate:"required"`
+	Comment        string   `json:"comment" example:"This is a comment." validate:"required"`
+	Active         bool     `json:"active" validate:"required"`
+	TextUpdatable  bool     `json:"text_updatable" validate:"required"`
+	Shortnames     []string `json:"shortnames" example:"GPL-2.0-only,GPL-2.0-or-later" validate:"required"`
+}
+
+// Id of successfully imported obligation
+type ObligationId struct {
+	Id    int64  `json:"id"`
+	Topic string `json:"topic" example:"copyleft"`
+}
+
+// Status of obligation records successfully inserted in the database during import
+type ObligationImportStatus struct {
+	Status int          `json:"status" example:"200"`
+	Data   ObligationId `json:"data"`
+}
+
+// Response structure for import obligation response
+type ImportObligationsResponse struct {
+	Status int           `json:"status" example:"207"`
+	Data   []interface{} `json:"data"` // can be of type models.LicenseError or models.ObligationImportStatus
+}
